colored the selectable skills

--- a/activities.html
+++ b/activities.html
@@ -79,24 +79,6 @@
         </main>
         <section>
             <ul id="partners">
-                <!--<li class="partner">
-                    <img src="images/partner-bustour.png" alt="Partner Bus Tours">
-                </li>
-                <li class="partner">
-                    <img src="images/partner-cabinrental.png" alt="Partner Cabin Rental">
-                </li>
-                <li class="partner">
-                    <img src="images/partner-campingadv.png" alt="Partner Camping Adventure">
-                </li>
-                <li class="partner">
-                    <img src="images/partner-collegetours.png" alt="Partner College Tours">
-                </li>
-                <li class="partner">
-                    <img src="images/partner-rentalbike.png" alt="Partner Bike Rentals">
-                </li>
-                <li class="partner">
-                    <img src="images/partner-tourgroup.png" alt="Partner Tour Group">
-                </li>-->
             </ul>
         </section>
               <!-- Footer Section -->
@@ -116,6 +98,8 @@
                 </div>
             </footer>
     </div>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src ="js/site_scripts.js"></script>
+    <script src ="js/activity.js"></script>
 </body>
 </html>
